--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
-
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
@@ -62,7 +61,9 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.Start">
-
+        <activity
+            android:name=".vpn.PremiumActivity"
+            android:exported="false" />
         <activity
             android:name=".vpn.EmailVerify"
             android:exported="false" />
@@ -74,12 +75,12 @@
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation" />
-
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
@@ -91,8 +92,8 @@
             android:exported="false" />
         <activity
             android:name=".vpn.DashboardActivity"
-            android:launchMode="standard"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="standard" />
         <activity
             android:name=".vpn.ForgotPasswordActivity"
             android:exported="false" />
@@ -116,7 +117,6 @@
         <activity
             android:name=".ui.BlankActivity"
             android:configChanges="uiMode" />
-
         <activity
             android:name=".vpn.SplashActivity"
             android:configChanges="uiMode"
