--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Start">
         <activity
+            android:name=".vpn.nav.TermsofServiceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".vpn.nav.PrivacyPolicyActivity"
+            android:exported="false" />
+        <activity
             android:name=".vpn.ForceUpdateActivity"
             android:exported="false" />
         <activity
