convert TermsofService to TermsOfService

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Start">
         <activity
-            android:name=".vpn.nav.TermsofServiceActivity"
+            android:name=".vpn.nav.TermsOfServiceActivity"
             android:exported="false" />
         <activity
             android:name=".vpn.nav.PrivacyPolicyActivity"
